2011-01-31  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Potentielle Leerzeichen werden aus dem Dateinamen zum Export in ein PDF
	  entfernt.

2011-01-28  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Stellt nun Informationen über die Firma bereit (Straße, Ort, Name).

	* src/de/bielefeld/umweltamt/aui/icons/gebuehrenbescheid.png: Neues Logo
	  für den Gebührenbescheid.

	* reports/gebuehrenbescheid.jrxml: Logo und Betreiberinformationen
	  eingefügt.

2011-01-28  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/resources/authors.txt,
	  src/de/bielefeld/umweltamt/aui/resources/version.txt,
	  src/de/bielefeld/umweltamt/aui/resources/revision.txt: Diese Dateien
	  können dazu genutzt werden, die SVN Revision, die Version der Software,
	  sowie die Liste der Autoren anzupassen. Sie werden vom Programm gelesen,
	  und an verschiedenen Stellen ausgewertet.

	* src/de/bielefeld/umweltamt/aui/icons/intevation-logo-50ppi-nontrans.png:
	  Das Logo der Intevation GmbH - taucht im Hilfe-Dialog des AUIK auf.

	  HINWEIS: Diese Dateien _MÜSSEN_ manuell gepflegt werden. Einen
	  automatisierten Mechanismus gibt es dafür noch nicht, wäre aber später
	  durchaus denkbar.

	* build.xml: Kopieren der Resource Dateien in den build-Ordner beim
	  Bauen des Projekts.

	* src/de/bielefeld/umweltamt/aui/AUIKataster.java: Hier wurden neue
	  Funktionen hinzugefügt, die es erlauben, die Versionsnummer, die Revision
	  Nummber und die Autoren von beliebiger Stelle des AUIK abzufragen. Dazu
	  werden die Resource Dateien eingelesen und ausgewertet.

	* src/de/bielefeld/umweltamt/aui/SettingsManager.java: Die statische
	  Versionsnummer wurde durch eine Abfrage in AUIKataster ersetzt.

	* src/de/bielefeld/umweltamt/aui/HauptFrame.java: Überarbeitung des
	  About-Dialogs. Das Layout wurde hier etwas verbessert, das Copyright und