@@ -1,6 +1,12 @@
 2011-01-31  Ingo Weinzierl <ingo@intevation.de>
 
 	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
+	  Potentielle Verzeichnis-Trenner werden aus dem Dateinamen zum Export in
+	  ein PDF entfernt und durch ein "-" ersetzt.
+
+2011-01-31  Ingo Weinzierl <ingo@intevation.de>
+
+	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
 	  Potentielle Leerzeichen werden aus dem Dateinamen zum Export in ein PDF
 	  entfernt.
 
